package admin

import (
	"github.com/zitadel/zitadel/internal/domain"
	admin_pb "github.com/zitadel/zitadel/pkg/grpc/admin"
)

func UpdatePrivacyPolicyToDomain(req *admin_pb.UpdatePrivacyPolicyRequest) *domain.PrivacyPolicy {
	return &domain.PrivacyPolicy{
		TOSLink:      req.TosLink,
		PrivacyLink:  req.PrivacyLink,
		HelpLink:     req.HelpLink,
		SupportEmail: domain.EmailAddress(req.SupportEmail),
	}
}
